--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@angular/router": "~15.2.0",
     "@nativescript/angular": "^15.0.0",
     "@nativescript/core": "~8.5.0",
+    "@nativescript/firebase": "^11.1.3",
+    "@nativescript/firebase-core": "^3.2.0",
+    "@nativescript/firebase-firestore": "^3.2.0",
+    "@nativescript/firebase-storage": "^3.2.0",
     "@nativescript/theme": "~3.0.2",
+    "nativescript-barcodescanner": "^4.1.2",
     "nativescript-ui-sidedrawer": "~15.2.0",
     "rxjs": "~7.6.0",
     "zone.js": "~0.13.0"
@@ -22,6 +27,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
     "@angular/compiler-cli": "~15.2.0",
+    "@nativescript/android": "8.5.4",
     "@nativescript/types": "~8.5.0",
     "@nativescript/webpack": "~5.0.14",
     "@ngtools/webpack": "~15.2.0",
